# RAnimation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  imgui.ini  setup_vcpkg.bat  vcpkg.json
Assets/SkeletalAnimCompute/shader/: Shaders.cfg  assimp.vs.hlsl  assimp_instance_matrix_mult.cs.hlsl  assimp_instance_transform.cs.hlsl  assimp_skinning.fs.hlsl
Assets/SkeletalAnimHelper/: untitled.level.usda
Assets/SkeletalAnimHelper/animated_woman/: Animated_Woman.asset.usda
Assets/SkeletalAnimHelper/shader/: Shaders.cfg  assimp.fs.hlsl  assimp.vs.hlsl  assimp_instance_matrix_mult.cs.hlsl  assimp_skinning.fs.hlsl  assimp_skinning.vs.hlsl  gizmo.fs.hlsl  gizmo.vs.hlsl  outline.fs.hlsl  outline.vs.hlsl
Assets/SkeletalAnimation/shader/: Shaders.cfg  assimp.fs.hlsl  assimp.vs.hlsl  assimp_skinning.fs.hlsl  assimp_skinning.vs.hlsl
CMake/: OutputDirectories.cmake  add_shader_make_target.cmake  imgui_file_dialog_options.cmake  imgui_options.cmake  sdl_options.cmake  shadermake_options.cmake  usd_options.cmake  vulkan_validation_options.cmake
CMake/Debug/: assimp_debug.cmake  nri_debug.cmake
CMake/Release/: assimp_release.cmake  detex_release.cmake  fmt_release.cmake  nri_release.cmake
Samples/SkeletalAnimCompute/: CMakeLists.txt
Samples/SkeletalAnimCompute/include/Model/: AnimClip.h  InstanceSettings.h  Mesh.h  Model.h  ModelAndInstanceData.h  ModelInstance.h  Node.h  RenderData.h
Samples/SkeletalAnimCompute/include/Platform/: InputTypes.h  Window.h
Samples/SkeletalAnimCompute/include/Platform/SDL/: SDLInputConverter.h  SDLPlatform.h  SDLWindow.h
Samples/SkeletalAnimCompute/include/RHIWrap/: Helper.h  NRIInterface.h
Samples/SkeletalAnimCompute/include/Renderer/: ComputePipeline.h  IRenderPass.h  NRITexture.h  PassRegistry.h  RenderResourceBudget.h  RenderResourceRegistry.h  Renderer.h  SceneBufferDescs.h  SceneFrameData.h
Samples/SkeletalAnimCompute/include/Renderer/Passes/: AnimationTransformComputePass.h  BoneMatrixComputePass.h  ImguiPass.h  SkinnedMeshDrawPass.h  StaticMeshDrawPass.h
Samples/SkeletalAnimCompute/include/Tools/: Camera.h  Timer.h
Samples/SkeletalAnimCompute/src/: Program.cpp
Samples/SkeletalAnimCompute/src/Model/: AnimChannel.cpp  AnimClip.cpp  Bone.cpp  Model.cpp  ModelInstance.cpp  Node.cpp
Samples/SkeletalAnimCompute/src/Platform/SDL/: SDLPlatform.cpp
Samples/SkeletalAnimCompute/src/RHIWrap/: Utils.cpp
Samples/SkeletalAnimCompute/src/Renderer/: ComputePipeline.cpp  NRITexture.cpp  PassRegistry.cpp  RenderResourceRegistry.cpp  Renderer.cpp  SkinningPipeline.cpp  UserInterface.cpp
Samples/SkeletalAnimCompute/src/Renderer/Passes/: AnimationTransformComputePass.cpp  BoneMatrixComputePass.cpp  SkinnedMeshDrawPass.cpp  StaticMeshDrawPass.cpp
Samples/SkeletalAnimCompute/src/Tools/: Camera.cpp  Timer.cpp  Tools.cpp
Samples/SkeletalAnimHelper/: CMakeLists.txt
Samples/SkeletalAnimHelper/include/Application/: Application.h
Samples/SkeletalAnimHelper/include/Editor/: Command.h  Editor.h  InstanceSettingsCommand.h  SceneEditor.h
Samples/SkeletalAnimHelper/include/Model/: AnimChannel.h  AnimClip.h  Bone.h  InstanceSettings.h  Model.h  ModelAndInstanceData.h  ModelInstance.h  Node.h  RenderData.h  UsdModelLoader.h  UsdSceneExporter.h
Samples/SkeletalAnimHelper/include/Platform/: InputState.h
Samples/SkeletalAnimHelper/include/Renderer/: IRenderPass.h  PassRegistry.h  Renderer.h  SceneFrameData.h  SceneResourceNames.h  UserInterface.h
Samples/SkeletalAnimHelper/include/Renderer/Passes/: GizmoDrawPass.h  OutlinePass.h  SkinnedMeshDrawPass.h
Samples/SkeletalAnimHelper/include/Tools/: Camera.h  Tools.h
Samples/SkeletalAnimHelper/src/Application/: Application.cpp
Samples/SkeletalAnimHelper/src/Editor/: Editor.cpp  SceneEditor.cpp
Samples/SkeletalAnimHelper/src/Model/: AnimChannel.cpp  AnimClip.cpp  Mesh.cpp  Model.cpp  ModelInstance.cpp  UsdConversion.h  UsdModelLoader.cpp  UsdPluginRegistration.h  UsdSceneExporter.cpp
Samples/SkeletalAnimHelper/src/Platform/SDL/: SDLWindow.cpp
Samples/SkeletalAnimHelper/src/Renderer/: Renderer.cpp  UserInterface.cpp
Samples/SkeletalAnimHelper/src/Renderer/Passes/: AnimationTransformComputePass.cpp  BoneMatrixComputePass.cpp  GizmoDrawPass.cpp  ImguiPass.cpp  OutlinePass.cpp  SkinnedMeshDrawPass.cpp  StaticMeshDrawPass.cpp
Samples/SkeletalAnimHelper/src/Tools/: Camera.cpp  Tools.cpp
Samples/SkeletalAnimation/: CMakeLists.txt
Samples/SkeletalAnimation/include/Application/: Application.h
Samples/SkeletalAnimation/include/Model/: AnimChannel.h  AnimClip.h  Bone.h  Mesh.H  Model.h  ModelAndInstanceData.h  Node.h  RenderData.h
Samples/SkeletalAnimation/include/Platform/: NativeWindowHandle.h  Platform.h
Samples/SkeletalAnimation/include/Platform/SDL/: SDLInputConverter.h  SDLPlatform.h  SDLWindow.h
Samples/SkeletalAnimation/include/RHIWrap/: Helper.h  NRIInterface.h  Utils.h
Samples/SkeletalAnimation/include/Renderer/: NRITexture.h  Renderer.h  SkinningPipeline.h
Samples/SkeletalAnimation/include/SkeletalAnimation/: NRIInterface.h  SkeletalAnimationSystem.h  Utils.h
Samples/SkeletalAnimation/src/: Program.cpp  main.cpp
Samples/SkeletalAnimation/src/Application/: Application.cpp
Samples/SkeletalAnimation/src/Model/: AnimChannel.cpp  AnimClip.cpp  Bone.cpp  Mesh.cpp  Model.cpp  ModelInstance.cpp  Node.cpp
Samples/SkeletalAnimation/src/Platform/SDL/: SDLInputConverter.cpp  SDLPlatform.cpp  SDLWindow.cpp
Samples/SkeletalAnimation/src/RHIWrap/: Utils.cpp
Samples/SkeletalAnimation/src/Renderer/: NRITexture.cpp  Renderer.cpp  SkinningPipeline.cpp  UserInterface.cpp
Samples/SkeletalAnimation/src/Tools/: Camera.cpp  Tools.cpp
Study/Plan_Week1_2/: SkeletalAnimationSystem.h
Study/Workspaces/SkeletalAnimCompute/: STATUS.md  WORKSPACE.md
Study/Workspaces/SkeletalAnimation/: STATUS.md  TOPICS.md  WORKSPACE.md
Study/Workspaces/_Comprehensive/: STATUS.md  TOPICS.md  WORKSPACE.md
Study/Workspaces/_System/: Defaults.md  NamingAndIDs.md  OutputContract.md  PromptGuidelines.md  ReviewRubric.md  TaskProtocol.md  (+1 more)
(+34 files in other folders)
